# Casino-FastAPI_React

./: .eslintrc.js  .gitignore  .stylelintrc.json  babel.config.json  test.py  webpack.config.ts
backend/: noxfile.py
backend/configs/: .flake8  .mypy.ini  .pylintrc  .ruff.toml  requirements.txt
backend/games/: Dockerfile
backend/users/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/users/alembic/: env.py
backend/users/alembic/versions/: 2023_09_23_0023-585a313cfaca_init.py
backend/users/src/: main.py  settings.py
backend/users/src/controllers/: users.py
backend/users/src/core/: auth.py  errors.py  password.py
backend/users/src/database/: base.py  session.py
backend/users/src/database/models/: users.py
backend/users/src/repositories/: base.py  users.py
backend/users/src/routers/: users.py
backend/users/src/schemas/: base.py  users.py
backend/users/src/services/: users.py
config/jest/: jest.config.ts  jestEmptyComponent.tsx
frontend/: .gitignore  package.json  tsconfig.json
frontend/public/locales/ru/: translation.json
frontend/src/app/: App.tsx
frontend/src/app/styles/: index.scss
frontend/src/app/types/: global.d.ts
frontend/src/features/AuthByUsername/: index.ts
frontend/src/shared/api/: authApi.ts
frontend/src/shared/const/: localStorage.ts
frontend/src/widgets/ThemeSwitcher/: index.ts
public/locales/en/: translation.json
src/: index.tsx
src/app/: App.tsx
src/entitites/User/: index.ts
src/pages/MainPage/ui/: MainPage.tsx
src/shared/config/i18n/: i18nForTests.ts
(+52 files in other folders)
