[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["SunriseFading <sunrisefading@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlalchemy = "^2.0.21"
uvicorn = "^0.23.2"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
fastapi = "^0.103.1"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
fastapi-jwt = "^0.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
